# esper-tv

./: .gitattributes  .gitconfig  .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md  config.toml  configure.py  docker-compose.yml  gunicorn_conf.py  manage.py  mysql.cnf  requirements.txt  visualdb-key.json
app/: .dockerignore  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.base  attach.py  cluster.py  gunicorn_conf.py  package.json  requirements.app.txt  requirements.base.txt  requirements.txt  supervisord.conf  webpack.config.js
app/rust-scripts/: .gitignore  Cargo.toml  build.sh  setup.py
app/rust-scripts/rust_scripts/: __init__.py
app/rust-scripts/src/: lib.rs
app/subserver/: .gitignore  Cargo.toml
app/subserver/src/: block_timer.rs  corpus.rs  json.rs  knn.rs  main.rs  progress.rs  util.rs
app/subserver/src/features/: mod.rs
app/subserver/src/text/: corpus.rs  index.rs  mod.rs
config/: google.toml  local.toml
db/: Dockerfile  postgresql.conf
esper/: .gitignore  .scanner.toml  Dockerfile  cmdutil.py  djutil.py  dump-db.sh  gunicorn_conf.py  ingest_and_process.sh  load-cloud-db.sh  package.json  requirements.txt  settings.py  setup.sh  supervisord.conf  tvnews.ipynb  urls.py  webpack.config.js  wsgi.py
frameserver/: Dockerfile  app.yaml  gunicorn_config.py  requirements.txt  server.py
guides/: dev.md  google.md
kube/: Dockerfile.master  Dockerfile.worker  loader.py  master.py  worker.py
nginx/: Dockerfile  google.conf.template  local.conf.template  nginx.conf  nginx.conf.template  subst.sh
query/: admin.py  apps.py  models.py  views.py
scripts/: emergency-reset.py  gce-gpu-setup.sh  get-bucket-size.sh  jupyter-token.sh  run-app-tests.sh  (+5 more)
(+695 files in other folders)
