[package]
name = "rust-scripts"
version = "0.1.0"
authors = ["root"]

[lib]
name = "rust_scripts"
crate-type = ["cdylib"]

[dependencies]
glob = "0.2"
rayon = "1.0"
srtparse = "0.1.1"
lazy_static = "1.0"
suffix = "1.0"
indicatif = "0.9.0"

[dependencies.pyo3]
version = "0.2"
features = ["extension-module"]
