[package]
name = "subserver"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]

[dependencies]
glob = "0.2"
rayon = "1.0"
lazy_static = "1.0"
suffix = "1.0"
indicatif = "0.9.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
#ndarray = "0.11.2"
ndarray = "0.9.1"
byteorder = "1"
nom = "3.2.1"
rand = "0.4.2"
rustlearn = "0.4.2"
rkm = "0.3.0"
protobuf = "2.0.2"
flame = "0.2"